
version 1.0 (24/09/2008)
	* first release
	
version 1.1 (05/01/2009)
	* added support for strings containing null (\x00) chars
	* added syntactic construct "x of them" 	
	* regular expressions syntax changed
	* now regular expressions can begin with any character

version 1.2
	* added support for global rules
	* added support for declaring alternative sub-strings in hex strings
	* "widechar" is now "wide" and can be used in conjuntion with "ascii"
	* some performance improvements
	* BUGFIX: Wrong behavior of escaped characters in regular expressions
	* BUGFIX: Fatal error in yara-python when invoking matchfile with invalid path twice
	* BUGFIX: Wrong precedence of OR and AND operators
	