@@ -41,11 +41,7 @@ GNU General Public License for more details.
 #define STRING_FLAGS_WIDE                       0x20
 #define STRING_FLAGS_REGEXP                     0x40
 #define STRING_FLAGS_FULL_WORD                  0x80
-
-#define RULE_FLAGS_MATCH                        0x01
-#define RULE_FLAGS_PRIVATE                      0x02
-#define RULE_FLAGS_GLOBAL						0x04
-#define RULE_FLAGS_REQUIRE_PE_FILE 	            0x08
+#define STRING_FLAGS_ANONYMOUS                  0x100
 
 #define IS_HEX(x)       (((x)->flags) & STRING_FLAGS_HEXADECIMAL)
 #define IS_NO_CASE(x)   (((x)->flags) & STRING_FLAGS_NO_CASE)
@@ -53,8 +49,12 @@ GNU General Public License for more details.
 #define IS_WIDE(x)      (((x)->flags) & STRING_FLAGS_WIDE)
 #define IS_REGEXP(x)    (((x)->flags) & STRING_FLAGS_REGEXP)
 #define IS_FULL_WORD(x) (((x)->flags) & STRING_FLAGS_FULL_WORD)
+#define IS_ANONYMOUS(x) (((x)->flags) & STRING_FLAGS_ANONYMOUS)
 
-
+#define RULE_FLAGS_MATCH                        0x01
+#define RULE_FLAGS_PRIVATE                      0x02
+#define RULE_FLAGS_GLOBAL						0x04
+#define RULE_FLAGS_REQUIRE_PE_FILE 	            0x08
 
 #ifndef ERROR_SUCCESS 
 #define ERROR_SUCCESS                           0
